ngStyle (ejemplo con ngModel)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,3 +12,4 @@
   <button (click)="cambiarColor('r')">Rojo</button>
   <button (click)="cambiarColor('b')">Azul</button>
 </div>
+<input type="text" [(ngModel)]="propiedadesParrafo.color">
