--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,6 @@
   Este es el texto de prueba 1
 </p>
 
-<br>
-
 <p [ngStyle]="propiedadesParrafo">
   Este es el texto de prueba 2
 </p>
@@ -19,3 +17,8 @@
 <input type="range" min="12" max="50" step="2" (change)="onChange($event)">
 <br>
 <input type="range" min="12" max="50" step="2" (input)="onInput($event)">
+
+<br><br>
+
+<h3>Componente Semaforo</h3>
+<app-semaforo></app-semaforo>
