--- a/src/app/semaforo/semaforo.component.html
+++ b/src/app/semaforo/semaforo.component.html
@@ -2,5 +2,6 @@
 
 <div [ngClass]="cadenaClases"></div>
 
-<!--Método más recomendado-->
 <div [ngClass]="vectorClases"></div> 
+
+<div [ngClass]="objetoClases"></div> 
