--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,3 +49,8 @@
 <h3 *ngIf="mostrar">Contenido del primer texto</h3>
 <h3 *ngIf="!mostrar">Contenido del segundo texto</h3>
 <button (click)="onClickMostrar()">Mostrar / Ocultar</button>
+
+
+<!--ngFor-->
+<h3>Componente Bucles</h3>
+<app-bucles></app-bucles>
