--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,3 +54,15 @@
 <!--ngFor-->
 <h3>Componente Bucles</h3>
 <app-bucles></app-bucles>
+
+
+<!--ngSwitch-->
+<h3>Componente Switch</h3>
+<app-switch></app-switch>
+
+
+<!--Directivas Personalizadas-->
+<h3>Componente Subrayado (Directiva Personalizada)</h3>
+<p appSubrayado>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, placeat.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, placeat.</p>
+<p appSubrayado>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, placeat.</p>
