@Input - directivas personalizadas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,4 +65,4 @@
 <h3>Componente Subrayado (Directiva Personalizada)</h3>
 <p appSubrayado>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, placeat.</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, placeat.</p>
-<p appSubrayado>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, placeat.</p>
+<p appSubrayado [config]="{colorHover: 'red', colorSinHover: 'yellow'}">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, placeat.</p>
